[package]
name = "larder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.29", features = ["ssl-vendored", "tracing"] }
thiserror = "1"
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.2", features = ["tokio", "futures-03"] }

[dev-dependencies]
env_logger = "*"
pretty_assertions = "*"
test-log = { version = "*", features = ["log", "trace"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
